Complete the header

--- a/index.html
+++ b/index.html
@@ -9,15 +9,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Booleaner | Home</title>
     <link rel="stylesheet" href="./css/style.css">
+    <style>
+        header{
+            background-image: url(./img/pattern.png);
+            background-color: #4ea0ff;
+            background-size: 400px;
+        }
+    </style>
 
 </head>
 
 <body>
 
     <!-- Logo and background with image -->
-    <header> 
-        
-        <img src="./img/logo.svg" alt="The Booleaner">
+    <header>
+
+        <img style="max-width:200px; max-height:100px; margin-top: 40px; margin-bottom: 5px; margin-left: 3px;" src="./img/logo.svg" alt="The Booleaner logo">
 
     </header>
     <!-- end Logo and background with image -->
