Finished table section

--- a/index.html
+++ b/index.html
@@ -88,6 +88,39 @@
 
         <!-- Table three columns four rows -->
         <section>
+
+            <table cellpadding="20px">
+
+                <thead>
+                    <tr>
+                        <th>Lorem, ipsum dolor</th>
+                        <th>Lorem, ipsum dolor</th>
+                        <th>Lorem, ipsum dolor</th>
+                    </tr>
+                </thead>
+
+                <tbody>
+
+                    <tr class="primaterzariga" >
+                        <td>Lorem, ipsum dolor</td>
+                        <td>Lorem, ipsum dolor</td>
+                        <td>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Porro architecto sit ullam nesciunt aut, repellendus, deserunt ad vero eaque velit quod repudiandae sint, exercitationem sed officia tenetur nemo dolor expedita</td>
+                    </tr>
+
+                    <tr>
+                        <td>Lorem, ipsum dolor</td>
+                        <td>Lorem, ipsum dolor</td>
+                        <td>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Porro architecto sit ullam nesciunt aut, repellendus, deserunt ad vero eaque velit quod repudiandae sint, exercitationem sed officia tenetur nemo dolor expedita</td>
+                    </tr>
+
+                    <tr class="primaterzariga">
+                        <td>Lorem, ipsum dolor</td>
+                        <td>Lorem, ipsum dolor</td>
+                        <td>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Porro architecto sit ullam nesciunt aut, repellendus, deserunt ad vero eaque velit quod repudiandae sint, exercitationem sed officia tenetur nemo dolor expedita</td>
+                    </tr>
+
+                </tbody>
+            </table>
             
         </section>
         <!-- end Table three columns four rows -->
