fixed some errors in the table

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <!-- First descriptive paragraph -->
         <section>
 
-            <p class="paragrafo">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Molestias optio magni totam sint facilis officia dolor at repellat quibusdam fugit dolore consequatur maxime nihil sunt corrupti, nulla laudantium accusantium exercitationem nobis error voluptatibus. Incidunt voluptatum, reprehenderit magnam libero non unde nemo nesciunt! <span id="sfondogiallo">Nesciunt, accusamus cupiditate, ullam, perferendis sed iste omnis fuga possimus quis rem optio ut quas</span>. Nesciunt, accusamus cupiditate, ullam, perferendis sed iste omnis fuga possimus quis rem optio ut quas. Possimus tempora ut aut aliquid doloribus quibusdam distinctio ipsum alias minus quo culpa expedita quisquam dignissimos ratione nisi eius iusto, dolorem, quis itaque? Accusantium velit corrupti ut itaque asperiores, expedita autem libero dolore exercitationem voluptas quod, nihil quidem odio. Repellat quisquam ut culpa!</p>
+            <p class="paragrafo">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Molestias optio magni totam sint facilis officia dolor at repellat quibusdam fugit dolore consequatur maxime nihil sunt corrupti, nulla laudantium accusantium exercitationem nobis error voluptatibus. Incidunt voluptatum, reprehenderit magnam libero non unde nemo nesciunt! <span class="sfondogiallo">Nesciunt, accusamus cupiditate, ullam, perferendis sed iste omnis fuga possimus quis rem optio ut quas</span>. Possimus tempora ut aut aliquid doloribus quibusdam distinctio ipsum alias minus quo culpa expedita quisquam dignissimos ratione nisi eius iusto, dolorem, quis itaque? Accusantium velit corrupti ut itaque asperiores, expedita autem libero dolore exercitationem voluptas quod, nihil quidem odio. Repellat quisquam ut culpa!</p>
             
         </section>
         <!-- end First descriptive paragraph -->
@@ -89,7 +89,7 @@
         <!-- Table three columns four rows -->
         <section>
 
-            <table cellpadding="20px">
+            <table>
 
                 <thead>
                     <tr>
@@ -127,7 +127,9 @@
 
         <!-- Second descriptive paragraph -->
         <section>
-            
+
+            <p class="paragrafo">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Molestias optio magni totam sint facilis officia dolor at repellat quibusdam fugit dolore consequatur maxime nihil sunt corrupti, nulla laudantium accusantium exercitationem nobis error voluptatibus. Incidunt voluptatum, reprehenderit magnam libero non unde nemo nesciunt! Nesciunt, accusamus cupiditate, ullam, perferendis sed iste omnis fuga possimus quis rem optio ut quas. Possimus tempora ut aut aliquid doloribus quibusdam distinctio ipsum alias minus quo culpa <span class="sfondogiallo"> expedita quisquam dignissimos ratione nisi eius iusto, dolorem, quis itaque? </span> Accusantium velit corrupti ut itaque asperiores, expedita autem libero dolore exercitationem voluptas quod, nihil quidem odio. Repellat quisquam ut culpa!</p>
+
         </section>
         <!-- end Second descriptive paragraph -->
 
@@ -136,6 +138,8 @@
 
     <!-- They might interest you -->
     <footer>
+
+        <h4>Potrebbe interessarti</h4>
 
     </footer>
     <!-- end They might interest you -->
