Finish footer and completed page layout

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <style>
 
         body{
+
             margin: 0; 
             padding: 0;
             background-size: cover;
@@ -23,7 +24,27 @@
             background-color: #4ea0ff;
             background-size: 450px;
         }
-        
+
+        #imgfooteruno {
+
+            margin-bottom: 5px;
+            margin-left: 5px;
+            background-image: url(./img/monitor.jpg);
+            background-repeat: no-repeat;
+            width: 300px;
+            height: 200px;
+        }
+
+        #imgfooterdue {
+            
+            margin-bottom: 5px;
+            margin-left: 5px;
+            background-image: url(./img/graph.jpg);
+            background-repeat: no-repeat;
+            width: 300px;
+            height: 200px;
+        }
+
     </style>
 
 </head> 
@@ -139,7 +160,20 @@
     <!-- They might interest you -->
     <footer>
 
-        <h4>Potrebbe interessarti</h4>
+        <h4>Potrebbero interessarti</h4>
+
+        <div id="imgfooteruno" >
+
+            <p class="txtfooter"> <b> Lorem, ipsum dolor </b> </p>
+
+        </div>
+
+        <div id="imgfooterdue">
+
+            <p class="txtfooter"> <b> Lorem, ipsum dolor </b> </p>
+
+        </div>
+
 
     </footer>
     <!-- end They might interest you -->
